ansible working, containers having trouble connecting to database

--- a/deployments/ansible/roles/api_server/templates/api_server.service.j2
+++ b/deployments/ansible/roles/api_server/templates/api_server.service.j2
@@ -5,20 +5,23 @@ Requires=docker.service
 
 [Service]
 Type=simple
-ExecStartPre=-/usr/bin/docker stop getherscan-api-sever
+ExecStartPre=-/usr/bin/docker stop getherscan-api-server
 ExecStartPre=-/usr/bin/docker rm getherscan-api-server
 ExecStart=/usr/bin/docker run \
             --log-driver journald \
 	    --publish 8000:8000 \
             --name getherscan-api-server \
             {{getherscan_image}} \
-            /api_sever \
-            serve \
-	    {{ansible_db_connection_string}} \
+	    go run cmd/api_server/main.go serve \
+	    {{ansible_db_host}} \
+	    {{ansible_db_port}} \
+	    {{ansible_db_user}} \
+	    {{ansible_db_password}} \
+	    {{ansible_db_name}} \
 	    8000
 Restart=on-failure
 RestartSec=30
-User=sudo
+User=root
 
 [Install]
 WantedBy=multi-user.target
